raw/ZAHIRA NAJMA 6421 245150207111056/2024-11-14-11-30-43.ceg/compilation.txt
NT.java:16: error: ';' expected
        double[] nilaiMasuk = new double[5]
                                           ^
NT.java:24: error: illegal start of expression
    public static void main(String[] args) {
    ^
2 errors
Not compiled
